Convert the OpenAPI YAML into a template.
It will allow to dynamically replace things in there.

--- a/docs/openapi.yaml.tmpl
+++ b/docs/openapi.yaml.tmpl
@@ -1,7 +1,8 @@
 openapi: 3.0.1
 info:
   title: Presence API.
-  description: Documentation of the Presence API Web Service.
+  description: |
+    Documentation of the Presence API Web Service (Date: {{ .date }})
   contact:
     name: Vincent Touchard
     email: touchardv@gmail.com
