Add timestamp when a device is first seen

--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -139,6 +139,9 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Interface'
+        first_seen_at:
+          type: string
+          format: date-time
         last_seen_at:
           type: string
           format: date-time
