--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -68,8 +68,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/Device'
         404:
-          description: ' Not found'
+          description: Not found
           content: {}
+    post:
+      tags:
+      - devices
+      summary: Attempt to contact a device given its identifier
+      operationId: contactDevice
+      parameters:
+      - name: id
+        in: path
+        description: The ID of the device
+        required: true
+        schema:
+          type: string
+      responses:
+        202:
+          description: Accepted
+        404:
+          description: Not found
     put:
       tags:
       - devices
