Fix issue with discovery/matching by MAC address - Use a lower-case MAC address

--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -174,7 +174,7 @@ components:
       properties:
         MACAddress:
           type: string
-          example: 01:02:03:04:05:06
+          example: a1:b2:c3:04:05:ff
         IPv4Address:
           type: string
           example: 192.168.10.20
