Add device properties. Extend tracker report function to include some optional properties.

--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -176,6 +176,10 @@ components:
           format: date-time
         present:
           type: boolean
+        properties:
+          type: object
+          additionalProperties:
+            type: string
         status:
           type: object
           $ref: '#/components/schemas/DeviceStatus'
