Improve device registration and update in order to ensure the status is always set

--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -207,7 +207,8 @@ components:
     DeviceStatus:
       type: string
       description: DeviceStatus defines the status of a device
-      enum: [undefined, discovered, ignored, tracked]
+      enum: [discovered, ignored, tracked]
+      required: true
   responses:
     deviceArray:
       description: A list of devices
