Add device update timestamp. Improve events: - onNew: only for tracked devices - onUpdated: handle status changes - onRemoved: only for tracked devices

--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -183,6 +183,10 @@ components:
         status:
           type: object
           $ref: '#/components/schemas/DeviceStatus'
+        updated_at:
+          description: The device last update date and time.
+          type: string
+          format: date-time
     Interface:
       required:
       - Type
