Remove distinction between "normal" bluetooth and ble.

--- a/api/openapi.yaml.tmpl
+++ b/api/openapi.yaml.tmpl
@@ -214,7 +214,7 @@ components:
       type: string
       description: |-
         InterfaceType defines the type of physical/software interface
-      enum: [unknown, ethernet, wifi, ipv4, bluetooth, ble]
+      enum: [unknown, ethernet, wifi, bluetooth]
       example: ethernet
     DeviceStatus:
       type: string
